Add Active to Navbar

--- a/blog-info.html
+++ b/blog-info.html
@@ -13,8 +13,8 @@
 
 <body>
     <section id="header" class="info-gallery">
-        <div class="container position-absolute fixed-navbar">
-            <div class="img-one-container">
+        <div class="position-absolute fixed-navbar fixedNavbar">
+            <div class="container img-one-container">
                 <div class="social-media mt-2">
                     <div class="row justify-content-between">
                         <div
@@ -451,6 +451,7 @@
     </div>
 
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
