--- a/contact-us.html
+++ b/contact-us.html
@@ -14,8 +14,8 @@
 <body>
 
     <section id="header" class="caontact-us-bg">
-        <div class="container position-absolute top-0 z-index-999 fixed-navbar">
-            <div class="img-one-container">
+        <div class="position-absolute top-0 z-index-999 fixed-navbar fixedNavbar">
+            <div class="container img-one-container">
                 <div class="social-media mt-2">
                     <div class="row justify-content-between">
                         <div
@@ -58,7 +58,7 @@
                     <button class="navbar-toggler btn" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                         aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                        <span class="fa fa-bars"></span>
                     </button>
                     <a class="nav-link d-none d-lg-block" href="index.html#testimonial">
                         <button class="ask-request">اطلب استشارّة</button>
@@ -369,8 +369,10 @@
     </div>
 
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
+
 </body>
 
 </html>
