--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         </div>
     </div>
 
-    <div class="container position-absolute top-0 z-index-999 fixed-navbar">
-        <div class="img-one-container">
+    <div class="position-absolute top-0 z-index-999 fixed-navbar fixedNavbar">
+        <div class="img-one-container container">
             <div class="social-media mt-2">
                 <div class="row justify-content-between">
                     <div
@@ -89,9 +89,9 @@
                 </div>
             </div>
             <nav class="navbar navbar-expand-lg" id="headerBar">
-                <button class="navbar-toggler btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="fa fa-bars"></span>
                 </button>
                 <a class="nav-link d-none d-lg-block" href="#testimonial">
                     <button class="ask-request">اطلب استشارّة</button>
