--- a/info-gallery.html
+++ b/info-gallery.html
@@ -16,8 +16,8 @@
 
 <body>
     <section id="header" class="info-gallery">
-        <div class="container position-absolute fixed-navbar">
-            <div class="img-one-container">
+        <div class="position-absolute fixed-navbar fixedNavbar">
+            <div class="container img-one-container">
                 <div class="social-media mt-2">
                     <div class="row justify-content-between">
                         <div
@@ -60,7 +60,7 @@
                     <button class="navbar-toggler btn" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                         aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                        <span class="fa fa-bars"></span>
                     </button>
                     <a class="nav-link d-none d-lg-block" href="index.html#testimonial">
                         <button class="ask-request">اطلب استشارّة</button>
@@ -351,6 +351,7 @@
     </div>
 
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
