--- a/technical consulting.html
+++ b/technical consulting.html
@@ -13,138 +13,27 @@
 
 <body>
     <section id="header" class="technical-consulting-bg">
-        <div class="container">
-            <div class="social-media">
-                <div class="row justify-content-between">
-                    <div
-                        class="col-md-6 col-12 justify-content-md-start justify-content-center d-flex social-media-links">
-                        <div class="ms-4">
-                            <a href="mailto:plan@slsalah.com">
-                                <span>plan@slsalah.com</span>
-                                <img src="imgs/icons/mail.svg" alt="mail-icon" class="img-fluid">
-                            </a>
-                        </div>
-                        <div>
-                            <a href="tel:+966555881764">
-                                <span dir="ltr">+966 555 88 1764</span>
-                                <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid">
-                            </a>
-                        </div>
-                    </div>
-                    <div
-                        class="col-md-6 text-start social-media-icons d-none d-md-flex justify-content-end align-items-center">
-                        <a href="https://api.whatsapp.com/send/?phone=966555881764&text&type=phone_number&app_absent=0"
-                            target="_blank">
-                            <i class="fa fa-whatsapp"></i>
-                        </a>
-                        <a href="https://www.linkedin.com/company/slsalah-sa/" target="_blank">
-                            <img src="imgs/icons/Linked-In.svg" alt="icon">
-                        </a>
-                        <a href="https://twitter.com/slsalah_sa" target="_blank">
-                            <img src="imgs/icons/icons8-twitterx 1.svg" alt="icon">
-                        </a>
-                        <a href="https://www.facebook.com/Slsalah.sa" target="_blank">
-                            <img src="imgs/icons/Facebook.svg" alt="icon">
-                        </a>
-                        <a href="https://www.instagram.com/slsalah_sa" target="_blank">
-                            <img src="imgs/icons/Instagram.svg" alt="icon">
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <nav class="navbar navbar-expand-lg" id="headerBar">
-                <button class="navbar-toggler btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <a class="nav-link d-none d-lg-block" href="index.html#testimonial">
-                    <button class="ask-request">اطلب استشارّة</button>
-                </a>
-                <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
-                    <ul class="navbar-nav text-center py-4">
-                        <a class="navbar-brand d-block d-lg-none" href="index.html">
-                            <img src="./imgs/logo.png" alt="logo">
-                        </a>
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="index.html">الصفحة
-                                الرئسية</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="who-we-ara.html">من نحن</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link active" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                الخدمات
-                                <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <g id="Group">
-                                        <path id="Vector"
-                                            d="M8.19384 8.78145L11.4938 5.48145L12.4365 6.42411L8.19384 10.6668L3.95117 6.42411L4.89384 5.48145L8.19384 8.78145Z"
-                                            fill="#E1E1E1" />
-                                    </g>
-                                </svg>
-
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a class="d-flex align-items-center dropdown-item" href="financial consulting.html">
-                                        <img src="./imgs/ايقونات الخدمات في شريط الهيدر/حلول مالية وادارية.svg"
-                                            alt="icon">
-                                        الاستشارات والحلول الإدارية و المالية
-                                    </a>
-                                    <a class="d-flex align-items-center dropdown-item" href="legal advice.html">
-                                        <img src="./imgs/ايقونات الخدمات في شريط الهيدر/الاستشارات والحلول القانونية.svg"
-                                            alt="icon">
-                                        الاستشارات والحلول القانونية
-                                    </a>
-                                    <a class="d-flex align-items-center dropdown-item" href="human consulting.html">
-                                        <img src="./imgs/ايقونات الخدمات في شريط الهيدر/استشارات الموارد البشرية.svg"
-                                            alt="icon">
-                                        استشارات الموارد
-                                        البشرية
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="d-flex align-items-center dropdown-item" href="technical consulting.html">
-                                        <img src="./imgs/ايقونات الخدمات في شريط الهيدر/الخدمات التقنية.svg" alt="icon">
-                                        الاستشارات
-                                        والحلول
-                                        التقنية
-                                    </a>
-                                    <a class="d-flex align-items-center dropdown-item" href="marketing consulting.html">
-                                        <img src="./imgs/ايقونات الخدمات في شريط الهيدر/ايقونة الاستشارات والحلول التسويقية.svg"
-                                            alt="icon">
-                                        الاستشارات والحلول التسويقية
-                                    </a>
-                                    <a class="d-flex align-items-center dropdown-item" href="marketing services.html">
-                                        <img src="./imgs/ايقونات الخدمات في شريط الهيدر/خدمات تسويقية.svg" alt="icon">
-                                        الخدمات التسويقية
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="d-flex align-items-center dropdown-item" href="advertising services.html">
-                                        <img src="./imgs/ايقونات الخدمات في شريط الهيدر/التصميم والحملات الاعلانية.svg"
-                                            alt="icon">
-                                        خدمات التصميم والحملات الإعلانية
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="gallery.html">معرض الأعمال</a>
-                        </li>
-                        <li class=" nav-item">
-                            <a class="nav-link" href="blog.html">المدونة</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact-us.html">اتصل بنا</a>
-                        </li>
-                        <a class="nav-link d-block d-lg-none" href="index.html#testimonial">
-                            <button class="ask-request">اطلب استشارّة</button>
-                        </a>
+        <div class="position-absolute top-0 z-index-999 fixed-navbar fixedNavbar">
+            <div class="container">
+                <div class=" social-media">
+                    <div class="row justify-content-between pt-2">
                         <div
-                            class="col-md-6 text-start social-media-icons d-flex d-md-none justify-content-center align-items-center">
+                            class="col-md-6 col-12 justify-content-md-start justify-content-center d-flex social-media-links">
+                            <div class="ms-4">
+                                <a href="mailto:plan@slsalah.com">
+                                    <span>plan@slsalah.com</span>
+                                    <img src="imgs/icons/mail.svg" alt="mail-icon" class="img-fluid">
+                                </a>
+                            </div>
+                            <div>
+                                <a href="tel:+966555881764">
+                                    <span dir="ltr">+966 555 88 1764</span>
+                                    <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div
+                            class="col-md-6 text-start social-media-icons d-none d-md-flex justify-content-end align-items-center">
                             <a href="https://api.whatsapp.com/send/?phone=966555881764&text&type=phone_number&app_absent=0"
                                 target="_blank">
                                 <i class="fa fa-whatsapp"></i>
@@ -162,15 +51,137 @@
                                 <img src="imgs/icons/Instagram.svg" alt="icon">
                             </a>
                         </div>
-                    </ul>
+                    </div>
                 </div>
-                <a class="navbar-brand d-none d-lg-block" href="index.html">
-                    <img src="./imgs/logo.png" alt="logo">
-                </a>
-            </nav>
-            <div class="headerContent">
-                <h1>الاستشارات والحلول التقنية</h1>
+                <nav class="navbar navbar-expand-lg mt-2" id="headerBar">
+                    <button class="navbar-toggler btn" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="fa fa-bars"></span>
+                    </button>
+                    <a class="nav-link d-none d-lg-block" href="index.html#testimonial">
+                        <button class="ask-request">اطلب استشارّة</button>
+                    </a>
+                    <div class="collapse navbar-collapse d-lg-flex justify-content-center align-items-center"
+                        id="navbarNav">
+                        <ul class="navbar-nav text-center py-4">
+                            <a class="navbar-brand d-block d-lg-none" href="index.html">
+                                <img src="./imgs/logo.png" alt="logo">
+                            </a>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="index.html">الصفحة
+                                    الرئسية</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="who-we-ara.html">من نحن</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link active" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    الخدمات
+                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <g id="Group">
+                                            <path id="Vector"
+                                                d="M8.19384 8.78145L11.4938 5.48145L12.4365 6.42411L8.19384 10.6668L3.95117 6.42411L4.89384 5.48145L8.19384 8.78145Z"
+                                                fill="#E1E1E1" />
+                                        </g>
+                                    </svg>
+
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a class="d-flex align-items-center dropdown-item"
+                                            href="financial consulting.html">
+                                            <img src="./imgs/ايقونات الخدمات في شريط الهيدر/حلول مالية وادارية.svg"
+                                                alt="icon">
+                                            الاستشارات والحلول الإدارية و المالية
+                                        </a>
+                                        <a class="d-flex align-items-center dropdown-item" href="legal advice.html">
+                                            <img src="./imgs/ايقونات الخدمات في شريط الهيدر/الاستشارات والحلول القانونية.svg"
+                                                alt="icon">
+                                            الاستشارات والحلول القانونية
+                                        </a>
+                                        <a class="d-flex align-items-center dropdown-item" href="human consulting.html">
+                                            <img src="./imgs/ايقونات الخدمات في شريط الهيدر/استشارات الموارد البشرية.svg"
+                                                alt="icon">
+                                            استشارات الموارد
+                                            البشرية
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="d-flex align-items-center dropdown-item"
+                                            href="technical consulting.html">
+                                            <img src="./imgs/ايقونات الخدمات في شريط الهيدر/الخدمات التقنية.svg"
+                                                alt="icon">
+                                            الاستشارات
+                                            والحلول
+                                            التقنية
+                                        </a>
+                                        <a class="d-flex align-items-center dropdown-item"
+                                            href="marketing consulting.html">
+                                            <img src="./imgs/ايقونات الخدمات في شريط الهيدر/ايقونة الاستشارات والحلول التسويقية.svg"
+                                                alt="icon">
+                                            الاستشارات والحلول التسويقية
+                                        </a>
+                                        <a class="d-flex align-items-center dropdown-item"
+                                            href="marketing services.html">
+                                            <img src="./imgs/ايقونات الخدمات في شريط الهيدر/خدمات تسويقية.svg"
+                                                alt="icon">
+                                            الخدمات التسويقية
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="d-flex align-items-center dropdown-item"
+                                            href="advertising services.html">
+                                            <img src="./imgs/ايقونات الخدمات في شريط الهيدر/التصميم والحملات الاعلانية.svg"
+                                                alt="icon">
+                                            خدمات التصميم والحملات الإعلانية
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="gallery.html">معرض الأعمال</a>
+                            </li>
+                            <li class=" nav-item">
+                                <a class="nav-link" href="blog.html">المدونة</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact-us.html">اتصل بنا</a>
+                            </li>
+                            <a class="nav-link d-block d-lg-none" href="index.html#testimonial">
+                                <button class="ask-request">اطلب استشارّة</button>
+                            </a>
+                            <div
+                                class="col-md-6 text-start social-media-icons d-flex d-md-none justify-content-center align-items-center">
+                                <a href="https://api.whatsapp.com/send/?phone=966555881764&text&type=phone_number&app_absent=0"
+                                    target="_blank">
+                                    <i class="fa fa-whatsapp"></i>
+                                </a>
+                                <a href="https://www.linkedin.com/company/slsalah-sa/" target="_blank">
+                                    <img src="imgs/icons/Linked-In.svg" alt="icon">
+                                </a>
+                                <a href="https://twitter.com/slsalah_sa" target="_blank">
+                                    <img src="imgs/icons/icons8-twitterx 1.svg" alt="icon">
+                                </a>
+                                <a href="https://www.facebook.com/Slsalah.sa" target="_blank">
+                                    <img src="imgs/icons/Facebook.svg" alt="icon">
+                                </a>
+                                <a href="https://www.instagram.com/slsalah_sa" target="_blank">
+                                    <img src="imgs/icons/Instagram.svg" alt="icon">
+                                </a>
+                            </div>
+                        </ul>
+                    </div>
+                    <a class="navbar-brand d-none d-lg-block" href="index.html">
+                        <img src="./imgs/logo.png" alt="logo">
+                    </a>
+                </nav>
             </div>
+        </div>
+        <div class="headerContent">
+            <h1>الاستشارات والحلول التقنية</h1>
         </div>
     </section>
 
@@ -435,6 +446,7 @@
         <p>جميع الحقوق محفوظة لشركة سلسلة 2023</p>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
