--- a/info-gallery.html
+++ b/info-gallery.html
@@ -57,17 +57,20 @@
                     </div>
                 </div>
                 <nav class="navbar navbar-expand-lg" id="headerBar">
-                    <button class="navbar-toggler btn" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                        aria-label="Toggle navigation">
+                    <button class="navbar-toggler btn" style="border-color: #1B4071; color: #1B4071;" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav"
+                        aria-expanded="false" aria-label="Toggle navigation">
                         <span class="fa fa-bars"></span>
                     </button>
+                    <a class="navbar-brand d-lg-none" href="index.html">
+                        <img src="./imgs/icons/dark-logo.png" alt="logo">
+                    </a>
                     <a class="nav-link d-none d-lg-block" href="index.html#testimonial">
                         <button class="ask-request">اطلب استشارّة</button>
                     </a>
                     <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
                         <ul class="navbar-nav text-center py-4 align-items-center">
-                            <a class="navbar-brand d-block d-lg-none" href="index.html">
+                            <a class="navbar-brand d-none d-lg-block" href="index.html">
                                 <img src="./imgs/logo.png" alt="logo">
                             </a>
                             <li class="nav-item">
@@ -177,15 +180,15 @@
             <div class="d-flex gap-5 justify-content-between flex-wrap first-row">
                 <div class="first-row-block">
                     <h4>حول المشروع</h4>
-                    <span>2 أسبوع / برمجة موقع<br class="d-none d-lg-block"> 2023/9/13</span>
+                    <span>2 أسبوع / برمجة موقع<br> 2023/9/13</span>
                 </div>
                 <div class="first-row-block">
                     <h4>العمل المٌنجز</h4>
-                    <span>التصميم المبدئي / Seo<br class="d-none d-lg-block"> برمجة الموقع النهائي</span>
+                    <span>التصميم المبدئي / Seo<br> برمجة الموقع النهائي</span>
                 </div>
                 <div class="first-row-block">
                     <h4>دورنا</h4>
-                    <span>التصميم / محركات البحث <br class="d-none d-lg-block">البرمجة</span>
+                    <span>التصميم / محركات البحث <br>البرمجة</span>
                 </div>
             </div>
             <div class="row second-row gy-4">
@@ -271,7 +274,7 @@
                                 <img src="imgs/icons/icons8-twitterx 1.svg" alt="">
                             </a>
                             <a href="https://www.facebook.com/Slsalah.sa" target="_blank">
-                                <img src="imgs/icons/Facebook.svg" alt="">
+                                <img src="imgs/icons/footer-facebook.svg" alt="">
                             </a>
                             <a href="https://www.instagram.com/slsalah_sa" target="_blank">
                                 <img src="imgs/icons/Instagram.svg" alt="">
