--- a/blog.html
+++ b/blog.html
@@ -60,14 +60,14 @@
                         aria-label="Toggle navigation">
                         <span class="fa fa-bars"></span>
                     </button>
+                    <a class="navbar-brand d-block d-lg-none" href="index.html">
+                        <img src="./imgs/logo.png" alt="logo">
+                    </a>
                     <a class="nav-link d-none d-lg-block" href="index.html#testimonial">
                         <button class="ask-request">اطلب استشارّة</button>
                     </a>
                     <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
                         <ul class="navbar-nav text-center py-4">
-                            <a class="navbar-brand d-block d-lg-none" href="index.html">
-                                <img src="./imgs/logo.png" alt="logo">
-                            </a>
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="index.html">الصفحة
                                     الرئسية</a>
@@ -202,134 +202,154 @@
             </div>
             <div class="main-block">
                 <div class="block">
-                    <div class="top d-flex align-items-end one">
-                        <button>تحليل</button>
-                        <button>تسويق</button>
-                    </div>
-                    <div class="bottom">
-                        <h4>دراسة الجدوى الاقتصادية</h4>
-                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
-                            سيزود لاحقاً، هذا النص هو نص
-                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
-                        <a href="blog-info.html">اقرأ المزيد</a>
-                    </div>
+                    <a href="blog-info.html">
+                        <div class="top d-flex align-items-end one">
+                            <button>تحليل</button>
+                            <button>تسويق</button>
+                        </div>
+                        <div class="bottom">
+                            <h4>دراسة الجدوى الاقتصادية</h4>
+                            <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
+                                سيزود لاحقاً، هذا النص هو نص
+                                تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
+                            <span>اقرأ المزيد</span>
+                        </div>
+                    </a>
                 </div>
                 <div class="block">
-                    <div class="top d-flex align-items-end two">
-                        <button>تحليل</button>
-                        <button>تسويق</button>
-                    </div>
-                    <div class="bottom">
-                        <h4>دراسة الجدوى الاقتصادية</h4>
-                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
-                            سيزود لاحقاً، هذا النص هو نص
-                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
-                        <a href="blog-info.html">اقرأ المزيد</a>
-                    </div>
+                    <a href="blog-info.html">
+                        <div class="top d-flex align-items-end two">
+                            <button>تحليل</button>
+                            <button>تسويق</button>
+                        </div>
+                        <div class="bottom">
+                            <h4>دراسة الجدوى الاقتصادية</h4>
+                            <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
+                                سيزود لاحقاً، هذا النص هو نص
+                                تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
+                            <span>اقرأ المزيد</span>
+                        </div>
+                    </a>
                 </div>
                 <div class="block">
-                    <div class="top d-flex align-items-end three">
-                        <button>تحليل</button>
-                        <button>تسويق</button>
-                    </div>
-                    <div class="bottom">
-                        <h4>دراسة الجدوى الاقتصادية</h4>
-                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
-                            سيزود لاحقاً، هذا النص هو نص
-                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
-                        <a href="blog-info.html">اقرأ المزيد</a>
-                    </div>
+                    <a href="blog-info.html">
+                        <div class="top d-flex align-items-end three">
+                            <button>تحليل</button>
+                            <button>تسويق</button>
+                        </div>
+                        <div class="bottom">
+                            <h4>دراسة الجدوى الاقتصادية</h4>
+                            <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
+                                سيزود لاحقاً، هذا النص هو نص
+                                تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
+                            <span>اقرأ المزيد</span>
+                        </div>
+                    </a>
                 </div>
                 <div class="block">
-                    <div class="top d-flex align-items-end four">
-                        <button>تحليل</button>
-                        <button>تسويق</button>
-                    </div>
-                    <div class="bottom">
-                        <h4>دراسة الجدوى الاقتصادية</h4>
-                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
-                            سيزود لاحقاً، هذا النص هو نص
-                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
-                        <a href="blog-info.html">اقرأ المزيد</a>
-                    </div>
+                    <a href="blog-info.html">
+                        <div class="top d-flex align-items-end four">
+                            <button>تحليل</button>
+                            <button>تسويق</button>
+                        </div>
+                        <div class="bottom">
+                            <h4>دراسة الجدوى الاقتصادية</h4>
+                            <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
+                                سيزود لاحقاً، هذا النص هو نص
+                                تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
+                            <span>اقرأ المزيد</span>
+                        </div>
+                    </a>
                 </div>
                 <div class="block">
-                    <div class="top d-flex align-items-end five">
-                        <button>تحليل</button>
-                        <button>تسويق</button>
-                    </div>
-                    <div class="bottom">
-                        <h4>دراسة الجدوى الاقتصادية</h4>
-                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
-                            سيزود لاحقاً، هذا النص هو نص
-                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
-                        <a href="blog-info.html">اقرأ المزيد</a>
-                    </div>
+                    <a href="blog-info.html">
+                        <div class="top d-flex align-items-end five">
+                            <button>تحليل</button>
+                            <button>تسويق</button>
+                        </div>
+                        <div class="bottom">
+                            <h4>دراسة الجدوى الاقتصادية</h4>
+                            <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
+                                سيزود لاحقاً، هذا النص هو نص
+                                تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
+                            <span>اقرأ المزيد</span>
+                        </div>
+                    </a>
                 </div>
                 <div class="block">
-                    <div class="top d-flex align-items-end six">
-                        <button>تحليل</button>
-                        <button>تسويق</button>
-                    </div>
-                    <div class="bottom">
-                        <h4>دراسة الجدوى الاقتصادية</h4>
-                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
-                            سيزود لاحقاً، هذا النص هو نص
-                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
-                        <a href="blog-info.html">اقرأ المزيد</a>
-                    </div>
+                    <a href="blog-info.html">
+                        <div class="top d-flex align-items-end six">
+                            <button>تحليل</button>
+                            <button>تسويق</button>
+                        </div>
+                        <div class="bottom">
+                            <h4>دراسة الجدوى الاقتصادية</h4>
+                            <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
+                                سيزود لاحقاً، هذا النص هو نص
+                                تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
+                            <span>اقرأ المزيد</span>
+                        </div>
+                    </a>
                 </div>
                 <div class="block">
-                    <div class="top d-flex align-items-end seven">
-                        <button>تحليل</button>
-                        <button>تسويق</button>
-                    </div>
-                    <div class="bottom">
-                        <h4>دراسة الجدوى الاقتصادية</h4>
-                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
-                            سيزود لاحقاً، هذا النص هو نص
-                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
-                        <a href="blog-info.html">اقرأ المزيد</a>
-                    </div>
+                    <a href="blog-info.html">
+                        <div class="top d-flex align-items-end seven">
+                            <button>تحليل</button>
+                            <button>تسويق</button>
+                        </div>
+                        <div class="bottom">
+                            <h4>دراسة الجدوى الاقتصادية</h4>
+                            <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
+                                سيزود لاحقاً، هذا النص هو نص
+                                تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
+                            <span>اقرأ المزيد</span>
+                        </div>
+                    </a>
                 </div>
                 <div class="block">
-                    <div class="top d-flex align-items-end eight">
-                        <button>تحليل</button>
-                        <button>تسويق</button>
-                    </div>
-                    <div class="bottom">
-                        <h4>دراسة الجدوى الاقتصادية</h4>
-                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
-                            سيزود لاحقاً، هذا النص هو نص
-                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
-                        <a href="blog-info.html">اقرأ المزيد</a>
-                    </div>
+                    <a href="blog-info.html">
+                        <div class="top d-flex align-items-end eight">
+                            <button>تحليل</button>
+                            <button>تسويق</button>
+                        </div>
+                        <div class="bottom">
+                            <h4>دراسة الجدوى الاقتصادية</h4>
+                            <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
+                                سيزود لاحقاً، هذا النص هو نص
+                                تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
+                            <span>اقرأ المزيد</span>
+                        </div>
+                    </a>
                 </div>
                 <div class="block">
-                    <div class="top d-flex align-items-end nine">
-                        <button>تحليل</button>
-                        <button>تسويق</button>
-                    </div>
-                    <div class="bottom">
-                        <h4>دراسة الجدوى الاقتصادية</h4>
-                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
-                            سيزود لاحقاً، هذا النص هو نص
-                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
-                        <a href="blog-info.html">اقرأ المزيد</a>
-                    </div>
+                    <a href="blog-info.html">
+                        <div class="top d-flex align-items-end nine">
+                            <button>تحليل</button>
+                            <button>تسويق</button>
+                        </div>
+                        <div class="bottom">
+                            <h4>دراسة الجدوى الاقتصادية</h4>
+                            <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
+                                سيزود لاحقاً، هذا النص هو نص
+                                تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
+                            <span>اقرأ المزيد</span>
+                        </div>
+                    </a>
                 </div>
                 <div class="block">
-                    <div class="top d-flex align-items-end ten">
-                        <button>تحليل</button>
-                        <button>تسويق</button>
-                    </div>
-                    <div class="bottom">
-                        <h4>دراسة الجدوى الاقتصادية</h4>
-                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
-                            سيزود لاحقاً، هذا النص هو نص
-                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
-                        <a href="blog-info.html">اقرأ المزيد</a>
-                    </div>
+                    <a href="blog-info.html">
+                        <div class="top d-flex align-items-end ten">
+                            <button>تحليل</button>
+                            <button>تسويق</button>
+                        </div>
+                        <div class="bottom">
+                            <h4>دراسة الجدوى الاقتصادية</h4>
+                            <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
+                                سيزود لاحقاً، هذا النص هو نص
+                                تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
+                            <span>اقرأ المزيد</span>
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="text-center"><button class="read-more">اقرأ المزيد</button></div>
@@ -363,7 +383,7 @@
                                 <img src="imgs/icons/icons8-twitterx 1.svg" alt="">
                             </a>
                             <a href="https://www.facebook.com/Slsalah.sa" target="_blank">
-                                <img src="imgs/icons/Facebook.svg" alt="">
+                                <img src="imgs/icons/footer-facebook.svg" alt="">
                             </a>
                             <a href="https://www.instagram.com/slsalah_sa" target="_blank">
                                 <img src="imgs/icons/Instagram.svg" alt="">
