--- a/who-we-ara.html
+++ b/who-we-ara.html
@@ -59,14 +59,14 @@
                         aria-label="Toggle navigation">
                         <span class="fa fa-bars"></span>
                     </button>
+                    <a class="navbar-brand d-block d-lg-none" href="index.html">
+                        <img src="./imgs/logo.png" alt="logo">
+                    </a>
                     <a class="nav-link d-none d-lg-block" href="index.html#testimonial">
                         <button class="ask-request">اطلب استشارّة</button>
                     </a>
                     <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
                         <ul class="navbar-nav text-center py-4">
-                            <a class="navbar-brand d-block d-lg-none" href="index.html">
-                                <img src="./imgs/logo.png" alt="logo">
-                            </a>
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="index.html">الصفحة
                                     الرئسية</a>
@@ -404,7 +404,7 @@
                                 <img src="imgs/icons/icons8-twitterx 1.svg" alt="">
                             </a>
                             <a href="https://www.facebook.com/Slsalah.sa" target="_blank">
-                                <img src="imgs/icons/Facebook.svg" alt="">
+                                <img src="imgs/icons/footer-facebook.svg" alt="">
                             </a>
                             <a href="https://www.instagram.com/slsalah_sa" target="_blank">
                                 <img src="imgs/icons/Instagram.svg" alt="">
