--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <link rel="shortcut icon" type="image/png" href="imgs/fivicon.png">
     <link rel="stylesheet" href="css/main.css">
-    <title>سلسلة - الصحفة الرئيسية</title>
+    <title>سلسلة - الصفحة الرئيسية</title>
     <style>
         html,
         body {
